Добавлены страницы и изменены ссылки MainMenu

--- a/WebGB.csproj
+++ b/WebGB.csproj
@@ -16,6 +16,11 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\CommonLayouts\Log\Partial\" />
+    <Folder Include="wwwroot\template_pages\" />
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
