--- a/WebGB.csproj
+++ b/WebGB.csproj
@@ -22,6 +22,10 @@
     <Folder Include="wwwroot\template_pages\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
